# capstone-anomaly

./: .gitignore  .markdownlintignore  .pymarkdown.json  CHANGELOG.md  CITATION.cff  DASHBOARD_ENHANCEMENTS_SUMMARY.md  DASHBOARD_QUICK_START.md  DEMO_SUMMARY.md  LEAF_SPINE_TOPOLOGY_SUMMARY.md  LICENSE  Makefile  QUICK_START.md  RCA_ENHANCEMENTS_SUMMARY.md  README.md  REAL_ML_DASHBOARD_GUIDE.md  TESTING_GUIDE.md  bgp_anomaly_uml.py  docker-compose.yml  go.mod  go.sum  launch_dashboard.py  launch_real_ml_dashboard.py  pyproject.toml  requirements.txt  setup.sh  test_lab_simple.py
.github/workflows/: ci.yml
archive/: README.md
archive/dashboards/: README.md  modern_dashboard.py
archive/examples/: comprehensive_dashboard_demo.py  ml_pipeline_integration.py  run_complete_system.py  run_multimodal_correlation.py
archive/models/: gpu_mp_detector.py  mp_detector.py
archive/topology/: __init__.py  network_graph.py
cmd/bmp-collector/: main.go
cmd/collector/: main.go
cmd/failure-injector/: exabgp.conf
config/: README.md  roles.yml
config/configs/: collector.yml  roles.yml
configs/: collector.yml
data/: README.md
data/alerts/: alerts_log.jsonl
data/evaluation/: baseline_normal_operation_ground_truth.json  bgp_route_flapping_ground_truth.json  evaluation_report.json  ground_truth.json  hardware_degradation_ground_truth.json  multimodal_correlated_failure_ground_truth.json  real_pipeline_results.json  test_run_summary.json
data/evaluation_coordinated/: bgp_flapping_spine-01_192.168.20.0_24_ground_truth.json  bgp_flapping_tor-02_192.168.100.0_24_ground_truth.json  hardware_spine-02_eth1_ground_truth.json  link_failure_edge-01_eth0_ground_truth.json  link_failure_tor-01_eth2_ground_truth.json  test_run_summary.json
data/evaluation_extended/: baseline_baseline_1_ground_truth.json  baseline_baseline_2_ground_truth.json  baseline_baseline_3_ground_truth.json  bgp_flapping_spine-01_192.168.20.0_24_ground_truth.json  bgp_flapping_spine-02_192.168.50.0_24_ground_truth.json  bgp_flapping_tor-01_192.168.10.0_24_ground_truth.json  bgp_flapping_tor-01_192.168.100.0_24_ground_truth.json  mass_withdrawal_edge-01_ground_truth.json  multimodal_edge-02_eth0_ground_truth.json  test_run_summary.json  (+6 more)
docs/: ENHANCED_ALERT_EXAMPLE.json  MULTIMODAL_CORRELATION.md  README.md
evaluation/: GETTING_STARTED.md  ORGANIZATION.md  README.md  analyze_real_results.py  analyze_results.py  analyze_scalability.py  generate_snmp_training_data.py  pipeline_runner.py  quick_validation.py  run_evaluation.py  run_with_real_pipeline.py  test_realistic_ml_detection.py  topology.yml  train_isolation_forest.py
examples/: comprehensive_dashboard_demo.py  demo_multimodal_correlation.py  run_complete_system.py  run_multimodal_correlation.py
lab/: QUICK_START.md  README.md  TESTING_GUIDE.md  bgp_data_collector.py  topo-dc-expanded.clab.yml  topo-enterprise-simple.clab.yml  topo-enterprise.clab.yml  topo.clab.yml
python/: Dockerfile  __init__.py  debug_matrixprofile.py  pipeline_gpu.py  test_gpu_mp.py
scripts/: check-bgp.sh  collector.sh  deploy.sh  destroy.sh  inject-failures.sh  integrate-with-ml.py  monitor-logs.sh
src/: Dockerfile  ENHANCED_SETUP.md  README.md  USAGE_GUIDE.md  debug_matrixprofile.py  demo_simple.py  demo_user_experience.py  dual_signal_pipeline.py  pipeline_gpu.py  requirements.txt  run_enhanced_pipeline.py  simple_gpu_test.py  test_cpu_mp.py  test_gpu_mp.py  test_nats.py  test_stumpy.py
tests/: README.md  __init__.py  conftest.py  data_publisher.py  quick_test.py  test_dual_signal.py  test_stumpy_simple.py
virtual_lab/: README.md  USAGE_GUIDE.md  __init__.py
(+259 files in other folders)
